--- a/modules/api/Cargo.toml
+++ b/modules/api/Cargo.toml
@@ -2,7 +2,6 @@
 name = "api"
 version = "1.0.0"
 edition = "2021"
-description = "Core Actix API Engine"
 
 [dependencies]
 actix-cors = "0.6"
@@ -16,11 +15,4 @@ serde_json = "1.0"
 serde_urlencoded = "0.7"
 thiserror = "1.0"
 time = { version = "0.3", features = [ "formatting", "macros", "serde" ] }
-
-[dependencies.tokio]
-version = "1"
-features = ["io-util", "macros", "rt-multi-thread", "net", "time"]
-
-[dev-dependencies]
-pretty_assertions = "1"
-toml = "0.7"
+tokio = { version = "1"}
